# Tryphon

./: .gitignore  CMakeLists.txt  LICENSE  main.c  main.py  project.yml  readme.md  setup.py
.github/workflows/: c-tests.yml  python-bundle.yml  python-tests.yml
Tryphon/python_bindings/: __init__.py  tryphon.py
Tryphon/src/: tryphon.c  tryphon.h
Tryphon/src/tests/: end_to_end_tests.cpp
python_bindings/: tryphon.py
python_bindings/tests/: test_tryphon.py
src/: CMakeLists.txt
test/: test_communication.c
